hphp/test/slow/array_iterator/array-traversable-2.php.expectf
bool(true)
bool(true)
bool(true)
bool(false)
Traversable
array(0) {
}
KeyedTraversable
array(0) {
}
Indexish
array(0) {
}

Fatal error: Argument 1 passed to ifoo() must be an instance of IFoo, array given in %s on line 20
